--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -24,9 +24,9 @@ jobs:
         with:
           java-version: "12.x"
       - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: "1.17.5"
+          channel: 'stable'
 
       - name: Decoding android/key.properties
         run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
