--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Push to releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*.apk"
+          artifacts: "build/app/outputs/apk/release/"
           tag: v0.0.${{github.run_number}}
           token: ${{ secrets.TOKEN }}
