--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -27,11 +27,11 @@ jobs:
         run: flutter pub get
 
       - name: Build APK
-        run: flutter build apk --split-per-abi --release
+        run: flutter build apk --release
 
       - name: Push to releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/"
+          artifacts: "build/app/outputs/apk/release/*"
           tag: v0.0.${{github.run_number}}
           token: ${{ secrets.TOKEN }}
