--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
-
+*.env
 
 # IntelliJ related
 *.iml
@@ -46,3 +46,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+.env
