--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   flutter_dotenv: ^5.0.2
+  cloud_firestore: ^3.1.17
 
 dev_dependencies:
   flutter_test:
