--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -17,6 +17,16 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
+      - name: Make envfile
+      - uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG: false
+          ANDROID_API: ${{ secrets.ANDROID_API }}
+          IOS_API: ${{ secrets.IOS_API }}
+          directory: <directory_name>
+          file_name: .env
+          fail_on_empty: false
+
       - uses: actions/checkout@v2
       - name: Setup Java
         uses: actions/setup-java@v1
