--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Make envfile
-      - uses: SpicyPizza/create-envfile@v1.3
+        uses: SpicyPizza/create-envfile@v1.3
         with:
           envkey_DEBUG: false
           ANDROID_API: ${{ secrets.ANDROID_API }}
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: "12.x"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
