tried fixing it one more time ....

--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -20,9 +20,8 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_DEBUG: false
-          ANDROID_API: ${{ secrets.ANDROID_API }}
-          IOS_API: ${{ secrets.IOS_API }}
+          envkey_ANDROID_API: ${{ secrets.ANDROID_API }}
+          envkey_IOS_API: ${{ secrets.IOS_API }}
           directory: <directory_name>
           file_name: .env
           fail_on_empty: false
