--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
+    - assets/.env
 
   # example:
   # fonts:
