--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -22,7 +22,7 @@ jobs:
           echo ANDROID_API=${{ secrets.ANDROID_API }} >> .env
           echo IOS_API=${{ secrets.IOS_API }} >> .env
           cat .env
-          ls
+          echo ls
 
       - uses: actions/checkout@v2
       - name: Setup Java
