--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -13,8 +13,7 @@ env:
   IOS_API: ${{ secrets.IOS_API }}
 
 jobs:
-  build:
-    name: Build APK
+  create:
     runs-on: ubuntu-latest
     steps:
       - name: Create .env file
@@ -23,13 +22,11 @@ jobs:
           ENV_ANDROID_API: ${{ secrets.ANDROID_API }}
           ENV_IOS_API: ${{ secrets.IOS_API }}
 
-      - name: Fetch action
-        id: pl
-        uses: Rishabh510/Path-lister-action@master
-        with:
-          path: "./"
-          type: ".*"
-
+  build_android:
+    name: Build APK
+    runs-on: ubuntu-latest
+    needs: [create]
+    steps:
       - uses: actions/checkout@v2
       - name: Setup Java
         uses: actions/setup-java@v1
