--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -46,6 +46,10 @@ jobs:
       - name: Pub Get Packages
         run: flutter pub get
 
+      - name: "Show files"
+        run: |
+          ls -la
+
       - name: Build APK
         run: flutter build apk --release
 
