--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^3.3.19
   flutter_dotenv: ^5.0.2
   cloud_firestore: ^3.1.17
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
