--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -66,3 +66,37 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*"
           tag: v0.0.${{github.run_number}}
           token: ${{ secrets.TOKEN }}
+
+  build_ios:
+    name: Build IOS APP
+    runs-on: macos-latest
+    needs: [create]
+    steps:
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+
+      - name: Pub Get Packages
+        run: flutter pub get
+
+      - name: "Create env file"
+        run: |
+          touch .env
+          echo ANDROID_API=${{ secrets.ANDROID_API }} >> .env
+          echo IOS_API=${{ secrets.IOS_API }} >> .env
+          cat .env
+
+      - name: "Show files"
+        run: |
+          ls -la
+
+      - name: Build IOS APP
+        run: flutter build ipa --release
+
+      - name: Push to releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/ipa/release/*"
+          tag: v0.0.${{github.run_number}}
+          token: ${{ secrets.TOKEN }}
