--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -91,6 +91,10 @@ jobs:
         with:
           channel: "stable"
 
+      - name: "Show files"
+        run: |
+          ls -la
+
       - name: Pub Get Packages
         run: flutter pub get
 
