--- a/.github/workflows/FlutterBuild.yml
+++ b/.github/workflows/FlutterBuild.yml
@@ -27,8 +27,37 @@ jobs:
         run: |
           ls -la
 
-  build:
-    name: Build
+  buildAPK:
+    name: Build (Android)
+    runs-on: ubuntu-latest
+    needs: [create]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+
+      - name: Pub Get Packages
+        run: flutter pub get
+
+      - name: Build APK
+        run: flutter build apk --release
+
+      - name: Push to releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*"
+          tag: v0.0.${{github.run_number}}
+          token: ${{ secrets.TOKEN }}
+
+  buildIOS:
+    name: Build (iOS)
     runs-on: macos-latest
     needs: [create]
     steps:
