--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cloud_firestore: ^3.1.17
   flutter_slidable: ^1.3.0
   url_launcher: ^6.1.4
+  localstorage: ^4.0.0+1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
